Updated components from navi

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,17 @@
   "include": [
     "src",
     "backup/useAutocomplete.tsx"
+  ],
+  "exclude": [
+    "node_modules",
+    "build",
+    "storybook-static",
+    "src/**/*.stories.tsx",
+    "src/**/*.test.tsx",
+    "src/esm",
+    "src/helpers",
+    "src/tokens",
+    "src/TokensOld",
+    "src/utility",
   ]
 }
